--- a/_content/timeline/2022-12-19.mdx
+++ b/_content/timeline/2022-12-19.mdx
@@ -8,3 +8,7 @@ Since it's the last meeting of the year, we're having a pizza party! Here's what
 -   3:00 - 3:15: Everyone's going to demo what they've done in Hack Club so far (if they want to)! If you've created a website, show it off! If you're working on a Sprig game, tell the rest of the club what your game's about!
 
 I don't think we'll finish the holiday card during the meeting, but I will have it deployed by the end of Monday! Then, you guys can share it with whoever you want to share it with.
+
+Other news:
+
+-   Sign up for [Winter Wonderland](https://hackclub.com/winter/)! You'll get $250 to build a hardware project. This can be anything from a mechanical keyboard to a Raspberry Pi computer to a drone. Maybe something even more ambitious!
