--- a/_content/walkthroughs/newcomers.mdx
+++ b/_content/walkthroughs/newcomers.mdx
@@ -105,12 +105,14 @@ The items are all _separated by commas_. So, to add your info, you'd add this to
 ```
 
 <details>
-    <summary>Where do I get this information?</summary>
-    * `github`: Your username for GitHub! to change your member picture, change your GitHub avatar.
-    * `slack`: Your Slack ID. To find this, go to Hack Club Slack, open up your profile (click your profile image in the top right corner > Profile), and then click on the hamburger menu > Copy member ID.
-    * `slackhandle`: This is your display name on Slack.
-    * `scrapbook`: This is your scrapbook ID, which you should have changed before.
-    * `website`: If you already created a website with Replit, this is the link to that website. Otherwise, **you don't have to add this line**.
+    <summary>Where do I get this information?</summary>* `github`: Your username
+    for GitHub! to change your member picture, change your GitHub avatar. * `slack`:
+    Your Slack ID. To find this, go to Hack Club Slack, open up your profile (click
+    your profile image in the top right corner > Profile), and then click on the
+    hamburger menu > Copy member ID. * `slackhandle`: This is your display name on
+    Slack. * `scrapbook`: This is your scrapbook ID, which you should have changed
+    before. * `website`: If you already created a website with Replit, this is the
+    link to that website. Otherwise, **you don't have to add this line**.
 </details>
 
 Now let's actually add the data. If you're viewing the file, simply click the little pencil icon above the code, which will take you to a page like this:
